# agenticore

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  _config.yml  docker-compose.yml  index.md  otel-collector-config.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  claude.yml  docker-publish.yml  docs-audit.yml  helm-publish.yml  pages.yml  publish-pypi.yml  release.yml  smoke-test.yml  sonar-scan.yml  test.yml
_includes/: head-custom.html
_sass/custom/: custom.scss
agenticore/: __init__.py  __main__.py  cli.py  config.py  jobs.py  oauth_provider.py  pr.py  profiles.py  repos.py  router.py  runner.py  server.py  telemetry.py
charts/agenticore/: Chart.yaml  values.yaml
defaults/profiles/: code.yml  review.yml
docs/: architecture.md  design-decisions.md  index.md
docs/architecture/: dual-interface.md  index.md  internals.md  job-execution.md  profile-system.md
docs/deployment/: docker-compose.md  index.md  kubernetes.md  otel-pipeline.md  releases.md
docs/getting-started/: connecting-clients.md  index.md  quickstart.md
docs/reference/: api-reference.md  cli-commands.md  configuration.md  index.md
helm/agenticore/: Chart.yaml  values.yaml
k8s/: headless-service.yaml  init-profiles.yaml  keda-scaledobject.yaml  pvc-shared.yaml  service.yaml  statefulset.yaml
(+29 files in other folders)
